[metadata]
name = napari-nyxus
version = {versioneer:version}
description = A napari plugin for calculating features from intensity-label image data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PolusAI/napari-nyxus
author = Jesse McKinzie
author_email = Jesse.McKinzie@axleinfo.com
license_files = LICENSE
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari 
    pandas
    numpy
    pandas
    nyxus>=0.5.0
    imagecodecs
    napari-skimage-regionprops>=0.10.1

[options.entry_points]
napari.manifest =
    napari-nyxus = napari_nyxus:napari.yaml

[options.package_data]
* = *.yaml

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440-pre
versionfile_source = napari_nyxus/_version.py
versionfile_build = napari_nyxus/_version.py
tag_prefix = v